--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
         <h1>Bienvenido a mi Página Personal</h1>
         <img src="./git_cat.jpg" alt="Mi foto de Perfil" width="100%">
         <h2>Soy Francisco López - Developer</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, asperiores.</p>
     </header>
     <main>
         <section>
-            <hr>
-            <h3>Algo sobre mí</h3>
+            <h3>Curiosidades sobre mí</h3>
             <ul>
-                <li>Profe 🔥</li>
-                <li>Tutor ❄️</li>
-                <li>Developer </li>
+                <li>Vivo en Huamantla</li>
+                <li>Developer, Profesor y Tutor en la UTT</li>
+                <li>Mi equipo favorito: Las Chivas</li>
             </ul>
         </section>
         <section>
@@ -29,6 +27,14 @@
                 <li>🦁</li>
                 <li>🐯</li>
             </ol>
+        </section>
+        <section>
+            <h3>Mis películas Favoritas</h3>
+            <ul>
+                <li>Trilogía de Matrix</li>
+                <li>Trilogía de El Señor de los Anillos</li>
+                <li>Trilogía de Volver al futuro</li>
+            </ul>
         </section>
     </main>
     <footer>
